--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/Infinite Hover.loader.js";
+      var loaderUrl = buildUrl + "/Infinite Hover Modded.loader.js";
       var config = {
-        dataUrl: buildUrl + "/Infinite Hover.data",
-        frameworkUrl: buildUrl + "/Infinite Hover.framework.js",
-        codeUrl: buildUrl + "/Infinite Hover.wasm",
+        dataUrl: buildUrl + "/Infinite Hover Modded.data",
+        frameworkUrl: buildUrl + "/Infinite Hover Modded.framework.js",
+        codeUrl: buildUrl + "/Infinite Hover Modded.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Infinite-Hover",
